@@ -1,4 +1,8 @@
 Overview of changes in Etherape 0.1.3
+* Links with no traffic disappear with time. Makes diagram
+  more readable.
+* IP host name displayed if no ether name available
+* Woops! Was confusing ether dst and src addresses. Solved.
 * Webpage now has a much more interesting screenshot thanks 
   to Nico Lumma 
 * Buttons are in English now.
